--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,7 +1,9 @@
 import = [
     "~/.config/alacritty/themes/hyper.toml",
-    "~/.config/alacritty/bindings.toml",
 ]
 
 [window]
 startup_mode = "Maximized"
+
+[font.normal]
+family = "MesloLGS NF"
