--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -7,3 +7,9 @@ startup_mode = "Maximized"
 
 [font.normal]
 family = "MesloLGS NF"
+
+[keyboard]
+bindings = [
+    {key= "ArrowLeft", mods="Command|Alt", action="SelectPreviousTab"},
+    {key= "ArrowRight", mods="Command|Alt", action="SelectNextTab"},
+]
