--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
         excludesfile = /path/to/home/.gitignore
         editor = vim
         autocrlf = input
+        pager = delta
 [color]
         ui = auto
 [gpg]
@@ -14,7 +15,19 @@
         gpgsign = true
 [rerere]
         enabled = true
-[maintenance]
-        # repo = /path/to/repo
 [init]
         defaultBranch = main
+[rebase]
+        updateRefs = true
+[fetch]
+        prune = true
+[interactive]
+        diffFilter = delta --color-only
+[delta]
+        navigate = true
+[merge]
+        conflictstyle = diff3
+[diff]
+        colorMoved = default
+[maintenance]
+        # repo = /path/to/repo
