add delta settings

--- a/.gitconfig
+++ b/.gitconfig
@@ -34,6 +34,7 @@
         diffFilter = delta --color-only
 [delta]
         navigate = true
+        side-by-side = true
 [merge]
         conflictstyle = diff3
 [diff]
