--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,5 @@
 font-family = "MesloLGS NF"
-font-size = 10
+font-size = 11
 maximize = "true"
 shell-integration-features = ssh-terminfo,ssh-env
+theme = Flexoki Dark
